aaa
Error when compiling the Java code of file './material/code-generation-tests/OK_GER01.java' generated by the Cianeto compiler (exit code 1)
./material/code-generation-tests/OK_GER01.java:8: error: not a statement
testStattestStattestStattestStat}
^
./material/code-generation-tests/OK_GER01.java:8: error: ';' expected
testStattestStattestStattestStat}
                                ^
2 errors
Cianeto compiler finished
